[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[workspace]
members = ["clap_main"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap_main = { version = "0.1.0", path = "clap_main" }
git2 = { version = "0.18.1", features = [
  "vendored-libgit2",
  "vendored-openssl",
] }
home = "0.5.5"
